# Celestial-Red-Teamer

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
challenges/easy/: Dockerfile  flag.txt  start.sh
challenges/hard/: Dockerfile  flag.txt  vsftpd.conf
challenges/medium/: Dockerfile  flag.txt  index.php
server/: Dockerfile  __init__.py  app.py  celestial_red_team2_environment.py
src/agent/: brain.py  parser.py
src/environment/: guardrails.py  sandbox.py
src/runner/: loop.py
