[project]
name = "openenv-celestial_red_team2"
version = "1.0.0"
description = "Celestial Red Teamer - Autonomous Cybersecurity Sandbox"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "docker>=7.0.0"
]

[project]
name = "openenv-celestial_red_team2"
version = "1.0.0"
# ... (keep your existing dependencies) ...

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "src"] # Tells Python these folders contain code
